Fixed z-index on suggestions list

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -210,6 +210,7 @@ body {
 	backdrop-filter: blur(12.7px);
 	-webkit-backdrop-filter: blur(12.7px);
 	color: white;
+	z-index: 2;
 }
 
 .suggestion-list {
